# AGOU

./: README.md  build.gradle  gradlew  gradlew.bat  local.properties  settings.gradle
.github/workflows/: build.yml
TMessagesProj/: build.gradle
TMessagesProj/jni/: CMakeLists.txt  akro_stubs.c
TMessagesProj/src/main/java/org/telegram/messenger/: Utilities.java
TMessagesProj/src/main/java/org/telegram/tgnet/: ConnectionsManager.java  NativeByteBuffer.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/akro/agram/: AkroGramApp.java
app/src/main/java/com/akro/agram/models/: TGDialog.java  TGMessage.java  TGStory.java
app/src/main/java/com/akro/agram/network/: TelegramController.java
app/src/main/java/com/akro/agram/network/auth/: AuthSendCodeResponse.java  AuthSignInResponse.java  TelegramAuthApi.java  TelegramAuthService.java
app/src/main/java/com/akro/agram/ui/activities/: ChatActivity.java  LoginActivity.java  MainActivity.java  SplashActivity.java  StoryActivity.java
app/src/main/java/com/akro/agram/ui/adapters/: DialogsAdapter.java  MessagesAdapter.java  StoriesAdapter.java
app/src/main/java/com/akro/agram/utils/: MockData.java
app/src/main/res/drawable/: bg_bubble_in.xml  bg_bubble_out.xml  bg_edittext.xml  bg_reply.xml  bg_story_reply.xml  bg_unread_badge.xml  ic_bot.xml  ic_channel.xml  ic_group.xml  ic_msg_check.xml  ic_msg_clock.xml  ic_msg_dcheck.xml  ic_msg_error.xml  story_ring.xml
app/src/main/res/layout/: activity_chat.xml  activity_login.xml  activity_main.xml  activity_splash.xml  activity_story.xml  item_dialog.xml  item_message_in.xml  item_message_out.xml  item_story.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
